style: Change Hero component style and App.css - Change the property of top to negative margin-top This avoids letting an invisible hole in the layout - Change in App.css the body padding from .5rem to .65rem

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -33,8 +33,8 @@ font-family: 'ClashDisplay-Variable', system-ui, -apple-system;
 
 body{
   margin: 0;
-  padding-right: .5rem;
-  padding-left: .5rem;
+  padding-right: .65rem;
+  padding-left: .65rem;
 }
 
 #root {
